--- a/tests.html
+++ b/tests.html
@@ -10,7 +10,7 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="//code.jquery.com/qunit/qunit-1.22.0.js"></script>
-  <script src="cryptoidentity.js"></script>
+  <script src="cryptoidentity.min.js"></script>
   <script src="tests.js"></script>
 </body>
 </html>
